squash from vivek to main

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 
     <h1>Hii its anuska here</h1>
+     <h1>fix this bug 90908</h1>
     <button class="button">
         <div class="bg"></div>
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 342 208" height="208" width="342"
