--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
 
-    <h1>Hii its anuska here BYE BYE</h1>
+    <h1>Hii I Am Souvik</h1>
      <h1>bug  fixed</h1>
     <button class="button">
         <div class="bg"></div>
