--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 
     <h1>Hii its anuska here BYE BYE</h1>
+    <h2> Dhanpal Sharma here </h2>
      <h1>bug  fixed</h1>
     <button class="button">
         <div class="bg"></div>
